security logic separated from controllers; get security parameters from config
